# Adatile-FastSAM

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_GUIDE.md  CODE_REVIEW.md  PROJECT.md  PROJECT_STATUS.md  RESEARCH_MAP.md  benchmark.py  pyproject.toml  reasonix.toml  requirements.txt  setup.py  test_thumbnail.py
adatile/: __init__.py
adatile/adaptation/: __init__.py  cat_adapter.py  prototype_adapter.py
adatile/adapter/: __init__.py  conv_adapter.py
adatile/backbone/: __init__.py  base.py  catsam_adapter.py  fastsam_backbone.py  fastsam_hook.py  fastsam_tile.py  feature_adapter.py  light_encoder.py
adatile/config/: __init__.py  config.py  experiment.py  recorder.py
adatile/core/: __init__.py  base.py
adatile/datasets/: __init__.py  base.py  bsseg.py  coco.py  collate.py  fewshot_dataset.py  fewshot_split.py  isaid.py  isaid5i.py  isaid_tile_wrapper.py  isaid_tiles.py  loveda_tiles.py  manager.py  mass_buildings.py  metadata.py  nwpu.py  p4_cache.py  stats.py  transforms.py  universal.py  vaihingen_tiles.py
adatile/decoder/: __init__.py  base.py  conditioned_decoder.py  fusion_probe.py  instance_decoder.py  light_decoder.py  linear_probe.py
adatile/engine/: __init__.py  builder.py  experiment_runner.py  hooks.py  trainer.py
adatile/evaluation/: __init__.py  metrics.py  sparse_eval.py
adatile/inference/: __init__.py  tile_fusion.py  tile_inference.py
adatile/logging/: __init__.py  anomaly_detector.py  backends.py  base.py  context.py  experiment_hook.py  experiment_logger.py  paper_logger.py  record.py  registry.py  run_logger.py  tracker.py  visualizer.py
adatile/losses/: __init__.py  budget_loss.py  contrastive.py  seg_loss.py  seg_losses.py  spm_loss.py  unified.py
adatile/metrics/: __init__.py  dice.py  fps.py  iou.py  params.py
adatile/modeling/: __init__.py  adatile_fastsam.py  as_fastsam_v2.py
adatile/profiling/: __init__.py  export.py  pipeline_profiler.py  stats.py  timer.py
configs/: __init__.py  cloud.py  coco.py  default.py  isaid.py
docs/: c04_code_explanation.md
legacy/: __init__.py  ada_spm.py  segmentation_base.py
scripts/: setup_cloud.sh  train_cloud.sh
tests/: __init__.py  conftest.py  test_backbone.py  test_config.py  test_datasets.py  test_e2e_pipeline.py  test_integration.py  test_logging.py  test_losses.py  test_mass_buildings.py  test_metrics.py  test_routing.py  test_sparse_prediction.py  test_tile_planner.py
tools/: __init__.py  _inspect_backbone.py  ablation_domain_shift.py  ablation_sparse_inference.py  ablation_spm_architecture.py  ablation_spm_supervision.py  ablation_tile_ratio.py  analyze_tile_entropy.py  build_isaid_dota.py  convert_isaid_binary.py  convert_loveda.py  debug_nan.py  diag_b04_exp12.py  diag_b04_overfit.py  diag_b04_tiles.py  diag_class_stats.py  diag_label_mismatch.py  diag_quick_check.py  diag_trace_single_instance.py  eval.py  eval_b00_tile_size_sensitivity.py  eval_b01_oracle_topk.py  eval_b01_spatial_baseline.py  eval_b02_5_generalization.py  eval_b02_learnability.py  eval_b03_router_architecture.py  eval_b04_dynamic_tile_selection.py  eval_baseline.py  eval_e002_linear_probe.py  eval_e003_5_spatial.py  eval_e003_fusion_probe.py  eval_e004a_upsample.py  eval_e005_light_decoder.py  eval_e005b1_partial_finetune.py  eval_e005d_lr_schedule.py  eval_e006_5_learned_embedding.py  eval_e006_proto_analysis.py  eval_e007_proto_module.py  eval_e007b_proto_vs_embedding.py  eval_e008_spm_sparsity.py  (+22 more)
(+128 files in other folders)
